fixbug and add new pagination
fixbug and add new pagination
